update 1 padding + warna latihan 3

--- a/app/src/main/res/layout/activity_selesai.xml
+++ b/app/src/main/res/layout/activity_selesai.xml
@@ -4,7 +4,8 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".selesaiActivity">
+    tools:context=".selesaiActivity"
+    android:padding="5dp">
 
     <RelativeLayout
         android:layout_width="match_parent"
@@ -25,17 +26,6 @@
             android:textStyle="bold">
 
         </TextView>
-
-        <TextView
-            android:id="@+id/cobaReceiveNama1"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_centerInParent="true"
-            android:textSize="20dp"
-            android:layout_marginTop="400dp">
-
-        </TextView>
-
 
 
     </RelativeLayout>
